--- a/Tree_depth_calculation/Tree_depth_calculation.csproj
+++ b/Tree_depth_calculation/Tree_depth_calculation.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <Compile Include="Branch.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="TreeStructureManipulation.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
